--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -2,4 +2,10 @@ page-about {
     ion-icon {
         color: #33B55B;
     }
+
+    .cabecalho {
+        background-color: #33B55B;
+        color: white;
+        text-align: center;
+    }
 }
