--- a/src/pages/consulta/consulta.scss
+++ b/src/pages/consulta/consulta.scss
@@ -14,4 +14,17 @@ page-consulta {
     .margem {
         margin-bottom: -30px !important;
     }
+    .toast-success {
+        > div{
+             background-color:#32db64!important;
+             text-align: center;
+         }
+      }
+      .toast-container{
+        background-color: white;
+        text-align: center;
+        }
+        .toast-message {
+            text-align: center;
+          }
 }
