Update: Correção de Bugs
Correção de Bugs:
> Percentual de Renda Comprometido e Disponícel estavam dando erro ao dividir por 0: fiz tratamento para nao mostrar quando for 0 e pra inserir despesa precisa ter pelo menos uma renda cadastrada;
> Nomes muito grandes nos títulos de Renda: ajustei o tamnho da letra e a quantidade de caracteres possíveis;
> Removido currency por Bug no teclado gerando valores estranhos;
> Melhoria da Intro Page;

Removi bastante lixo do codigo!!!

--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,18 +1,23 @@
 page-intro {
-    .principal {
+    .inicio {
         background-color: #33B55B;
         color: white;
+    }
+    .fim {
+        background-color: #33B55B;
+        color: white;
+        width: 240px;
     }
     .slide_image img {
         width: 240px;
     }
     .swiper-pagination-bullet-active {
         opacity: 1;
-        background: grey;
+        background: greenyellow;
     }
     .teste {
-    opacity: 0.2;
-    filter: alpha(opacity=50);
+        opacity: 0.2;
+        filter: alpha(opacity=50);
     }
     .bar {
         //height: 4em;
@@ -22,6 +27,5 @@ page-intro {
         //border-top: 3px solid #ccc;
         border-bottom: 3px solid #ccc;
         margin-top: 5.0em;
-    }
-      
+    }      
 }
