--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,8 +35,9 @@ $app-direction: ltr;
 
 $colors: (
   //primary:    #488aff,
+  //secondary:  #32db64,
   primary:    #33B55B,
-  secondary:  #32db64,
+  secondary:  #488aff,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
