--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -2,10 +2,15 @@ page-about {
     ion-icon {
         color: #33B55B;
     }
-
     .cabecalho {
         background-color: #33B55B;
         color: white;
+        text-align: center;
+    }
+    ion-row {
+        text-align: center;
+    }
+    ion-col {
         text-align: center;
     }
 }
