--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,4 +4,10 @@ page-home {
         color: white;
     }
 
+    .principal-custom {
+        background-size: cover;
+        background-position: center;    
+   }
+
+   .card { border-radius : 10px; }
 }
