--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,21 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+/*
+@font-face {
+    font-family: Roboto;
+    src: url('../assets/fonts/Roboto.woff2');
+    //font-family: IndieFlower;
+    //src: url('../assets/fonts/IndieFlower.woff2');
+}
+*{
+    font-family: Roboto;
+    //font-family: IndieFlower;
+}
+body, span, button, h1, h2, h3, p, ion-item, ion-button {
+    font-family: Roboto;
+}
+*/
 .normalToast {
     text-align: justify;
 }
