--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,18 +1,16 @@
 page-about {
-    ion-icon {
-        color: #33B55B;
-    }
-    .cabecalho {
-        background-color: #33B55B;
-        color: white;
-        text-align: center;
-    }
-    ion-row {
-        text-align: center;
-    }
-    ion-col {
-        text-align: center;
-    }
-
-    .card { border-radius : 10px; }
+  ion-icon {
+    color: #33b55b;
+  }
+  .cabecalho {
+    background-color: #33b55b;
+    color: white;
+    text-align: center;
+  }
+  ion-row {
+    text-align: center;
+  }
+  ion-col {
+    text-align: center;
+  }
 }
