--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,13 +1,11 @@
 page-home {
-    .cabecalho {
-        background-color: #33B55B;
-        color: white;
-    }
+  .cabecalho {
+    background-color: #33b55b;
+    color: white;
+  }
 
-    .principal-custom {
-        background-size: cover;
-        background-position: center;    
-   }
-
-   .card { border-radius : 10px; }
+  .principal-custom {
+    background-size: cover;
+    background-position: center;
+  }
 }
