--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,18 +1,18 @@
 page-intro {
-    .inicio {
-        background-color: #33B55B;
-        color: white;
-    }
-    .fim {
-        background-color: #33B55B;
-        color: white;
-        width: 240px;
-    }
-    .swiper-pagination-bullet-active {
-        opacity: 1;
-        background: greenyellow;
-    }
-    ion-slide {
-        background-color: #33B55B;
-    }  
+  .inicio {
+    background-color: #33b55b;
+    color: white;
+  }
+  .fim {
+    background-color: #33b55b;
+    color: white;
+    width: 240px;
+  }
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: greenyellow;
+  }
+  ion-slide {
+    background-color: #33b55b;
+  }
 }
