Update: Publicando Versão 0.0.6
> Alterando o back em Editar
> Corrigindo o Bug de cadastrar qualquer Despesa maior que 35%
> Removendo função de Alerta (nao usada)
> Pequenos Ajustes

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,9 +3,17 @@ page-home {
     background-color: #33b55b;
     color: white;
   }
-
   .principal-custom {
     background-size: cover;
     background-position: center;
+  }
+  .negrito {
+    font-weight: bold;
+  }
+  ion-icon {
+    color: #33b55b;
+  }
+  .icone-vermelho {
+    color: red;
   }
 }
