Update: Preparando Versão 0.0.7
> Removido getAll;
> Todo tratamento dos valores é feito pelo localstorage;
> Atualizado o Intro;

--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,9 +1,9 @@
 page-intro {
-  .inicio {
+  .intro-inicio {
     background-color: #33b55b;
     color: white;
   }
-  .fim {
+  .intro-fim {
     background-color: #33b55b;
     color: white;
     width: 240px;
